Added content for omelette and started burger Pictures now included

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,7 +7,14 @@
     <body>
         <h1>Burger</h1>
         <p>
-            
+            <img src="https://d3cizcpymoenau.cloudfront.net/images/25154/SFS_Wisconsin_Butter_Burger-25.jpg" width="350" alt="Picture of a butter burger">
+        </p>
+        <p>
+            This butter burger is as the name implies, dripping with butter. Not the healthiest snack but o so delicious.
+        </p>
+
+        <p>
+            A butterburger is a burger that with every everything, from the buns to the patty's, is covered with butter. the idea is to mix in butter with the fatty ground beef 
         </p>
     </body>
 </html>
