--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
     <head>
         <title>Odin_recipes_omelette</title>
         <meta charset="UTF-8">
     </head>
     <body>
+
         <h1>Omelette</h1>
+
+        <p><img src="https://images.ctfassets.net/lzukox2jf57a/ryOhSCYZTkbnos4pIGVeg/a5ec77d667fb6dc3177829905dd3b28d/optimized-french-omelette-web.jpg?fm=jpg&fl=progressive&q=90&fit=crop&w=1500&h=999" width="400" alt="Omelette"></p>
+        <p>Follow this recipe and you will be able to make a delisious omellete as the one pictured above.</p>
+    
+        <p>This recipe is one of the simplest, and most delicious breakfast/brunch meal I know. There are a few alternative adition you can make but the basis stay pretty much the same. 
+            The key to making the propper french omelette is to no over cook it. There is this golden middle ground here. Not too hard and not too soft. 
+            it is important to take it slow and stay atentive. When browning starts to form on the outside of the omellete it changes the flavour and ceases to be a french omelette.
+            Some twists you could add to the omelette is, for example, blue cheese and caramalized onions.</p>
+
+        <h2>Ingredients</h2>
+            <p>
+            <ul>
+                <li>6 egs</li>
+                <li>25gr unsalted butter</li>
+                <li>chives</li>
+                <li>Two pinches of grated parmesan cheese</li>
+            </ul>
+        </p>
+        <h2>Discription</h2>
         <p>
-            
+            <ol>
+                <li>Heat the pan on low heat</li>
+                <li>beat the eggs for aproximatly 3 min with a fork or 1 min to with a wisk</li>
+                <li>Add the butter to the pan. No need to wait on browning cause a butter taste is what you want with your egg</li>
+                <li>add the eggs and stur slowly. Think of sturrinf as if youd make a  mixed egg but slower. The idea is to have the egg cook evenly and stay reasonably unbrowned at the bottem.</li>
+
+            </ol>
         </p>
     </body>
 </html>
