--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Odin Recipes</h1>
 
     <p><ul>
-        <a href="./recipes/omelette.html"></a>
-        <a href="./recipes/burger.html"></a>
+        <a href="./recipes/omelette.html">Omelette</a>
+        <a href="./recipes/burger.html">Burger</a>
     </ul></p>
 </body>
 </html>
