finished omelette.html

--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title>Odin_recipes_omelette</title>
+        <title>Odin_recipes_french_omelette</title>
         <meta charset="UTF-8">
     </head>
     <body>
 
-        <h1>Omelette</h1>
+            <h1>French Omelette</h1>
 
         <p><img src="https://images.ctfassets.net/lzukox2jf57a/ryOhSCYZTkbnos4pIGVeg/a5ec77d667fb6dc3177829905dd3b28d/optimized-french-omelette-web.jpg?fm=jpg&fl=progressive&q=90&fit=crop&w=1500&h=999" width="400" alt="Omelette"></p>
         <p>Follow this recipe and you will be able to make a delisious omellete as the one pictured above.</p>
     
-        <p>This recipe is one of the simplest, and most delicious breakfast/brunch meal I know. There are a few alternative adition you can make but the basis stay pretty much the same. 
-            The key to making the propper french omelette is to no over cook it. There is this golden middle ground here. Not too hard and not too soft. 
+        <p>This recipe is one of the simplest, and most delicious ways to make a breakfast/brunch meals I know. There are a few alternative adition you can make but the basis stay pretty much the same. 
+            The key to making the propper french omelette is to no over cook it. There is this golden middle ground here. Not too dry and not too runny, and staying vertually consistent all the way through. 
             it is important to take it slow and stay atentive. When browning starts to form on the outside of the omellete it changes the flavour and ceases to be a french omelette.
             Some twists you could add to the omelette is, for example, blue cheese and caramalized onions.</p>
 
         <h2>Ingredients</h2>
-            <p>
+         <p>
             <ul>
                 <li>6 egs</li>
-                <li>25gr unsalted butter</li>
-                <li>chives</li>
+                <li>More (french) unsalted butter than you think you'll need</li>
+                <li>Some chopped chives</li>
                 <li>Two pinches of grated parmesan cheese</li>
             </ul>
         </p>
-        <h2>Discription</h2>
+                <h2>Discription</h2>
         <p>
             <ol>
                 <li>Heat the pan on low heat</li>
-                <li>beat the eggs for aproximatly 3 min with a fork or 1 min to with a wisk</li>
-                <li>Add the butter to the pan. No need to wait on browning cause a butter taste is what you want with your egg</li>
-                <li>add the eggs and stur slowly. Think of sturrinf as if youd make a  mixed egg but slower. The idea is to have the egg cook evenly and stay reasonably unbrowned at the bottem.</li>
-
+                <li>Beat the eggs for aproximatly 3 min with a fork or 1 min to with a wisk.</li>
+                <li>Add the butter to the pan. No need to wait on browning cause a butter taste is what you want with your egg.</li>
+                <li>Add the eggs and stur slowly. Think of sturring as if youd make a  mixed egg but slower. The idea is to have the egg cook evenly and stay reasonably unbrowned at the bottem.</li>
+                <li>Be very carefull not to put it too high, you want as little browning as possible. keep going around the edges with your spatulla trying to keep the edges from browning and keeping the omelette loose in the pan.</li>
+                <li>Sprinkle the parmesan on top and season with pepper and salt. Just a little will do the trick, you do not want to overpower the flavour of the eggs.</li>
+                <li>When the top is starting to set, carefully fold both outside edges to the middle. Dont fret if you mess this up cause it's just really hard.</li>
+                <li>Flip over ones and get your plate ready</li>
+                <li>slide the omelette carefully on your plate and sprinkle some chives on top. Again, just a little will do the egg is king in this dish and chives have just enough flavour to complement the delicate taste of the egg</li>
             </ol>
+        </p>
+
+        <p>
+            This recipe is simple to execute but a challenge to master. Even if you botch the egg flipping or it comes out a little overdone, it will still be good. its a fun dish to master because you dont need so many ingredients.
+            Do trust me when i say that if you end up getting this recipe down and the inside of the omelette stays borderline runny and the outside is a pale yellow with no browning, you will be blowing peoples minds.
         </p>
     </body>
 </html>
