Committing last few minor tweaks

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title>Odin_recipes_burger</title>
+        <title>Odin_recipes_butterburger</title>
         <meta charset="UTH-8">
     </head>
     <body>
-        <h1>Burger</h1>
+        <h1>ButterBurger</h1>
         <p>
             <img src="https://d3cizcpymoenau.cloudfront.net/images/25154/SFS_Wisconsin_Butter_Burger-25.jpg" width="350" alt="Picture of a butter burger">
         </p>
         <p>
-            This butter burger is as the name implies, dripping with butter. Not the healthiest snack but o so delicious.
+            This butter burger is, as the name implies, dripping with butter. Not the healthiest snack but o so delicious.
         </p>
 
         <p>
-            A butterburger is a burger that with every everything, from the buns to the patty's, is covered with butter. the idea is to mix in butter with the fatty ground beef 
+            A butterburger has everything, from the buns to the patty's, covered in butter. 
+            The idea is to mix in butter with the fatty ground beef. After making the patty's you fry the patty's in butter.
+            The buns are butter buns toasted in butter and then buttered up. This burtger has a mere 3 condements. 
+            One is the pickle, then we have the all american cheese, and last but not least we have the caramalized onions.
+            When I say caramalized I mean caramalized in tons of butter for a long, long time (a good 40min to 1hr).
+        </p>
+
+        <h2>Ingredients</h2>
+
+        <p>
+            <ul>
+                <li>Enough fatty ground beef for 8 patty's</li>
+                <li>Ton's of butter</li>
+                <li>4 butter buns</li>
+                <li>American cheese (or some chedar)</li>
+                <li></li>
+
+
+                <!--I will now stop this project for it is starting to feel rather pointless-->
+
+
+                
+            </ul>
         </p>
     </body>
 </html>
