--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -41,8 +41,8 @@
         </p>
 
         <p>
-            This recipe is simple to execute but a challenge to master. Even if you botch the egg flipping or it comes out a little overdone, it will still be good. its a fun dish to master because you dont need so many ingredients.
-            Do trust me when i say that if you end up getting this recipe down and the inside of the omelette stays borderline runny and the outside is a pale yellow with no browning, you will be blowing peoples minds.
+            This recipe is simple to execute but a challenge to master. Even if you botch the egg flipping or it comes out a little overdone, it will still be pretty tasty. It's a fun dish to master because you dont need so many ingredients.
+            Do trust me when I say that if you end up getting this recipe down and the inside of the omelette stays borderline runny and the outside is a pale yellow with no browning, you will be blowing peoples minds.
         </p>
     </body>
 </html>
