Finished burger.html, needs touch-up

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -29,14 +29,28 @@
                 <li>Ton's of butter</li>
                 <li>4 butter buns</li>
                 <li>American cheese (or some chedar)</li>
-                <li></li>
-
-
-                <!--I will now stop this project for it is starting to feel rather pointless-->
-
-
-                
+                <li>Thick juicy pickles</li>
+                <li>4 larger sweet onions</li>  
             </ul>
+        </p>
+
+        <h2>Discription</h2>
+
+        <p>
+            <ol>
+                <li>Start by heating a skillet or similairly thick pan to a low to medium low heat</li>
+                <li>Next, cut the onions into half rings</li>
+                <li>Butter up that skillet (lot's of butter) and add onions</li>
+                <li>Keep sturing untill they start browning. Season with some pepper and salt, turn the fire low and put a lid on the pan.</li>
+                <li>Let the onions sit like this for a while. optionally, you can add a bit of butter during the caramalization process for a more intense buttery flavour.</li>
+                <li>While the onions are doing their thing take the butter out of the fridge and start cutting it into small cubes. Throw the butter cubes into the minched meat and mix thoroughly.</li>
+                <li>Form patty's. Do with this whatever you like. I like mine to be thin and haning over the sides of the burger buns but if you like them thick boys, fine by me.</li>
+                <li>After about 30 min the onions should be propper caramalized (though go ahead and cook them for 30 min longer). any excess onions can be kept for up to a week. This stuff is great on sandwich or by tossing them into some sauce.</li>
+                <li>In a fresh pan but the heat up to medium high. When hot add some butter and then the burgers. I like to flaten my burgers. Fuck medium rare on a burger. I go for medium-well.</li>
+                <li>After the first and only flipping, add the onions, let it sit as to let the flavour drench into the burger. Thenadd your cheese, bit of watter in the pan and cap it off to let it melt. One slice, two slice, up to you. Because my burgers are thin and cheese loving dutchman I put two thin burgers per bun and on each of the burger patty's two slices of cheese.</li>
+                <li>Toast the buns and slather the top with salted butter. lay the patty's on the bun and add pickles.</li>
+                <li>Thats it boys! Bonapetit!</li>
+            </ol>
         </p>
     </body>
 </html>
