Finished the website. Added last-word.html. Added home page buttons.

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title>Odin_recipes_butterburger</title>
+        <title>Butter Burger</title>
         <meta charset="UTH-8">
     </head>
     <body>
@@ -10,11 +10,11 @@
             <img src="https://d3cizcpymoenau.cloudfront.net/images/25154/SFS_Wisconsin_Butter_Burger-25.jpg" width="350" alt="Picture of a butter burger">
         </p>
         <p>
-            This butter burger is, as the name implies, dripping with butter. Not the healthiest snack but o so delicious.
+            <strong>The Butter Burger is, as the name implies, dripping with butter. Not the healthiest snack but o so delicious.</strong>
         </p>
 
         <p>
-            A butterburger has everything, from the buns to the patty's, covered in butter. 
+            A butter burger has everything, from the buns to the patty's, covered in butter. 
             The idea is to mix in butter with the fatty ground beef. After making the patty's you fry the patty's in butter.
             The buns are butter buns toasted in butter and then buttered up. This burtger has a mere 3 condements. 
             One is the pickle, then we have the all american cheese, and last but not least we have the caramalized onions.
@@ -52,5 +52,7 @@
                 <li>Thats it boys! Bonapetit!</li>
             </ol>
         </p>
+
+        <a href="../index.html">Home</a>
     </body>
 </html>
