--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title>Odin_recipes_french_omelette</title>
+        <title>French Omelette</title>
         <meta charset="UTF-8">
     </head>
     <body>
@@ -9,7 +9,7 @@
             <h1>French Omelette</h1>
 
         <p><img src="https://images.ctfassets.net/lzukox2jf57a/ryOhSCYZTkbnos4pIGVeg/a5ec77d667fb6dc3177829905dd3b28d/optimized-french-omelette-web.jpg?fm=jpg&fl=progressive&q=90&fit=crop&w=1500&h=999" width="400" alt="Omelette"></p>
-        <p>Follow this recipe and you will be able to make a delisious omellete as the one pictured above.</p>
+        <p><strong>Follow this recipe and you will be able to make a delisious omellete as the one pictured above.</strong></p>
     
         <p>This recipe is one of the simplest, and most delicious ways to make a breakfast/brunch meals I know. There are a few alternative adition you can make but the basis stay pretty much the same. 
             The key to making the propper french omelette is to no over cook it. There is this golden middle ground here. Not too dry and not too runny, and staying vertually consistent all the way through. 
@@ -44,5 +44,7 @@
             This recipe is simple to execute but a challenge to master. Even if you botch the egg flipping or it comes out a little overdone, it will still be pretty tasty. It's a fun dish to master because you dont need so many ingredients.
             Do trust me when I say that if you end up getting this recipe down and the inside of the omelette stays borderline runny and the outside is a pale yellow with no browning, you will be blowing peoples minds.
         </p>
+
+        <a href="../index.html">Home</a>
     </body>
 </html>
