--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
 <body>
     <h1>Odin Recipes</h1>
 
+    <img src="./img/chef.png" width="350" alt="Chef chopping tomato">
+
     <p>
         <ul>
-            <a href="./recipes/omelette.html">Omelette</a>
+            <li><a href="./recipes/omelette.html">The French Omelette</a></li>
         </ul>
     </p>
     <p>
         <ul>    
-            <a href="./recipes/burger.html">Burger</a>
+            <li><a href="./recipes/burger.html">The Butter Burger</a></li>
+        </ul>
+    </p>
+    <p>
+        <ul>
+            <li><a href="./recipes/last-word.html">The Last Word</a></li>
         </ul>
     </p>
 </body>
