Added style.css and included link in html files

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,6 +3,7 @@
     <head>
         <title>Butter Burger</title>
         <meta charset="UTH-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>ButterBurger</h1>
@@ -36,7 +37,7 @@
 
         <h2>Discription</h2>
 
-        <p>
+        <p class="Discription List">
             <ol>
                 <li>Start by heating a skillet or similairly thick pan to a low to medium low heat</li>
                 <li>Next, cut the onions into half rings</li>
@@ -53,6 +54,6 @@
             </ol>
         </p>
 
-        <a href="../index.html">Home</a>
+        <button><a href="../index.html">Home</a></button>
     </body>
 </html>
