--- a/recipes/last-word.html
+++ b/recipes/last-word.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Last Word</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>The Last Word</h1>
