--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -3,6 +3,7 @@
     <head>
         <title>French Omelette</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
 
