Tweaked pages slightly

--- a/recipes/last-word.html
+++ b/recipes/last-word.html
@@ -39,6 +39,6 @@
         </ol>
     </p>
 
-    <a href="../index.html">Home</a>
+<button><a  href="../index.html">Home</a></button>
 </body>
 </html>
