--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -46,6 +46,6 @@
             Do trust me when I say that if you end up getting this recipe down and the inside of the omelette stays borderline runny and the outside is a pale yellow with no browning, you will be blowing peoples minds.
         </p>
 
-        <a href="../index.html">Home</a>
+        <button><a href="../index.html">Home</a></button>
     </body>
 </html>
